@@ -1,7 +1,6 @@
 package com.example.worklog.config;
 
 import com.example.worklog.jwt.JwtValidationFilter;
-import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Bean;
@@ -14,7 +13,6 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.access.intercept.AuthorizationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.Collections;
@@ -37,38 +35,35 @@ public class WebSecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .cors(corsCustomizer -> corsCustomizer.configurationSource(new CorsConfigurationSource() {
-                    @Override
-                    public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
-                        CorsConfiguration config = new CorsConfiguration();
-                        config.setAllowedOrigins(Arrays.asList(
-                                "http://localhost:8100",
-                                "https://today-worklog.vercel.app",
-                                "https://today.worklog.shop",
-                                "http://localhost:63342"
-                        ));
-                        config.setAllowedMethods(
-                                List.of(
-                                    HttpMethod.GET.name(),
-                                    HttpMethod.HEAD.name(),
-                                    HttpMethod.POST.name(),
-                                    HttpMethod.PUT.name(),
-                                    HttpMethod.DELETE.name(),
-                                    HttpMethod.OPTIONS.name(),
-                                    HttpMethod.PATCH.name()
-                                )
-                        );
-                        config.setAllowCredentials(true);
-                        config.setAllowedHeaders(Collections.singletonList("*"));
-                        config.setMaxAge(3600L); //1시간
-                        return config;
-                    }
+                .cors(corsCustomizer -> corsCustomizer.configurationSource(request -> {
+                    CorsConfiguration config = new CorsConfiguration();
+                    config.setAllowedOrigins(Arrays.asList(
+                            "http://localhost:8100",
+                            "https://today-worklog.vercel.app",
+                            "https://today.worklog.shop",
+                            "http://localhost:63342"
+                    ));
+                    config.setAllowedMethods(
+                            List.of(
+                                HttpMethod.GET.name(),
+                                HttpMethod.HEAD.name(),
+                                HttpMethod.POST.name(),
+                                HttpMethod.PUT.name(),
+                                HttpMethod.DELETE.name(),
+                                HttpMethod.OPTIONS.name(),
+                                HttpMethod.PATCH.name()
+                            )
+                    );
+                    config.setAllowCredentials(true);
+                    config.setAllowedHeaders(Collections.singletonList("*"));
+                    config.setMaxAge(3600L); //1시간
+                    return config;
                 }))
                 .csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(authHttp -> authHttp
                         .requestMatchers(
                                 HttpMethod.GET,
-                                "/", "/connect"
+                                "/", "/connect", "swagger-ui/**", "/v3/**"
                                 )
                         .permitAll()
                         .requestMatchers(
